# context8-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  MIGRATION_TO_PYTHON_MCP.md  Makefile  README.md  TEST_GUIDE.md  US2_INTEGRATION_TODO.md  compose.override.yml  docker-compose.yml  prometheus.yml  test_system.sh
.refs/: INDEX.yaml  README.md  clone.sh
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
analytics/: Dockerfile  go.mod  go.sum
docs/: PHASE10_COMPLETION.md  architecture.md  metrics.md
docs/runbooks/: deployment.md  monitoring.md  nautilus-troubleshooting.md  troubleshooting.md
docs/schemas/: events.json  mcp.json  report.json
mcp/: Dockerfile  go.mod  go.sum
mcp-server/: .dockerignore  Dockerfile  Dockerfile.rest  Dockerfile.sse  README.md  USAGE.md  openapi.yaml  pyproject.toml  rest_server.py  server.py  sse_server.py
producer/: Dockerfile  pyproject.toml
producer/config/: prometheus-alerts.yml
producer/lua/: acquire_lease.lua  release_lease.lua  renew_lease.lua
producer/src/: __init__.py  analytics_strategy.py  config.py  instrument_loader.py  main.py  redis_client.py  redis_publisher.py  simple_producer.py
producer/src/calculators/: anomalies.py  depth.py  flow.py  health.py  liquidity.py  spread.py
producer/src/coordinator/: assignment.py  hrw_sharding.py  lease_manager.py  membership.py
producer/src/metrics/: prometheus.py
producer/src/reporters/: fast_cycle.py  redis_cache.py  slow_cycle.py
producer/src/state/: ring_buffer.py  symbol_state.py
producer/tests/: __init__.py
specs/001-market-report-mcp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-nt-embedded-analytics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+39 files in other folders)
