[tool.poetry]
name = "context8-producer"
version = "0.1.0"
description = "NautilusTrader-based market data producer for context8-mcp"
authors = ["ForgeTrade Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
redis = "^5.0.0"
python-dotenv = "^1.0.0"
structlog = "^24.0.0"
websocket-client = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
